--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -6,19 +6,18 @@ on:
         - main
 
 jobs:
-    
-    - name: Checkout
-      uses: actions/checkout@v2
-
-    install-dep:
-        - uses: actions/setup-node@master
-        - uses: c-hive/gha-yarn-cache@v1
-        - name: Install node modules
-          run: |
-            yarn install
-    test-app:
-        - name: Run test
-          run: yarn test-ci
+    test-ci:
+        name: Test app
+        runs-on: ubuntu-latest
+        steps:
+           - name: Checkout
+             uses: actions/checkout@v2
+           - uses: actions/setup-node@master
+           - uses: c-hive/gha-yarn-cache@v1
+           - name: Install node modules
+             run: yarn install
+           - name: Run test
+             run: yarn test-ci
 
 
 
