--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,10 +4,10 @@ on:
   pull_request:
     branches:
         - master
-
+#  DOC: https://github.com/zsajjad/testing-app/blob/main/.github/workflows/ci.yml#L15
 jobs:
     test-ci:
-        name: Test app
+        name: Test react native
         runs-on: ubuntu-latest
         steps:
            - name: Checkout
