--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,20 +4,20 @@ on:
   pull_request:
     branches:
         - master
-#  DOC: https://github.com/zsajjad/testing-app/blob/main/.github/workflows/ci.yml#L15
 jobs:
     test-ci:
         name: Test react native
         runs-on: ubuntu-latest
         steps:
            - name: Checkout
-             uses: actions/checkout@v2
-           - uses: actions/setup-node@master
-           - uses: c-hive/gha-yarn-cache@v1
+             uses: actions/checkout@v4
+           - uses: actions/setup-node@v4
+             with:
+                node-version: 18
            - name: Install node modules
-             run: yarn install
+             run: npm i --force
            - name: Run test
-             run: yarn test-ci
+             run: npm run test
 
 
 
