add test command

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
+    "action-test":"jest",
     "lint": "expo lint"
   },
   "jest": {
