--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     branches:
         - master
+  push :
+    branches:
+      - develop
 jobs:
     test-ci:
         name: Test react native
@@ -17,7 +20,8 @@ jobs:
            - name: Install node modules
              run: npm i --force
            - name: Run test
-             run: npm run test
+             run: npm run action-test
+
 
 
 
