add build develop

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,8 @@ on:
         - master
   push :
     branches:
-      - develop
+      # - develop
+      - master
 jobs:
     test-ci:
         name: Test react native
