--- a/.github/workflows/build-develop.yml
+++ b/.github/workflows/build-develop.yml
@@ -12,16 +12,16 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-    - uses: actions/setup-node@master
-    - uses: c-hive/gha-yarn-cache@v1
+    - uses: actions/setup-node@v4
+      with: 
+         node-version: 18
+  
 
     - name: Install node modules
-      run: |
-        yarn install
+      run: npm i --force
 
     - name: Run test
-      run: |
-        yarn test-ci
+      run: npm run action-test
 
     - name: Cache Gradle Wrapper
       uses: actions/cache@v2
