--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,8 +6,7 @@ on:
         - master
   push :
     branches:
-      # - develop
-      - master
+      - develop
 jobs:
     test-ci:
         name: Test react native
