--- a/.github/workflows/build-develop.yml
+++ b/.github/workflows/build-develop.yml
@@ -40,12 +40,12 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-gradle-caches-
 
-    - name: Make Gradlew Executable
-      run: cd android && chmod +x ./gradlew
+    # - name: Make Gradlew Executable
+    #   run: cd android && chmod +x ./gradlew
 
     - name: Build Android Release
       run: |
-        cd android && ./gradlew assembleRelease --no-daemon
+        cd android && ./gradlew build --no-daemon
 
     - name: Upload Artifact
       uses: actions/upload-artifact@v1
