--- a/.github/workflows/build-develop.yml
+++ b/.github/workflows/build-develop.yml
@@ -45,11 +45,11 @@ jobs:
 
     - name: Build Android Release
       run: |
-        cd android && ./gradlew build --no-daemon
+           ./gradlew build 
 
-    - name: Upload Artifact
-      uses: actions/upload-artifact@v1
-      with:
-        name: app-release.apk
-        path: android/app/build/outputs/apk/release/
+    # - name: Upload Artifact
+    #   uses: actions/upload-artifact@v1
+    #   with:
+    #     name: app-release.apk
+    #     path: android/app/build/outputs/apk/release/
 
