--- a/.github/workflows/build-develop.yml
+++ b/.github/workflows/build-develop.yml
@@ -1,4 +1,4 @@
-name: Development Distribution For develop
+name: Development Distribution
 
 on:
   push:
@@ -12,19 +12,16 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-    - uses: actions/setup-node@v4
-      with: 
-         node-version: 18
-  
+    - uses: actions/setup-node@master
+    - uses: c-hive/gha-yarn-cache@v1
 
     - name: Install node modules
-      run: npm i --force
+      run: |
+        yarn install
 
     - name: Run test
-      run: npm run action-test
-
-    - name: init Gradel
-      uses: gradle/actions/setup-gradle@v3
+      run: |
+        yarn test-ci
 
     - name: Cache Gradle Wrapper
       uses: actions/cache@v2
@@ -40,16 +37,89 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-gradle-caches-
 
-    # - name: Make Gradlew Executable
-    #   run: cd android && chmod +x ./gradlew
+    - name: Make Gradlew Executable
+      run: cd android && chmod +x ./gradlew
 
     - name: Build Android Release
       run: |
-           ./gradlew build 
+        cd android && ./gradlew assembleRelease --no-daemon
 
-    # - name: Upload Artifact
-    #   uses: actions/upload-artifact@v1
-    #   with:
-    #     name: app-release.apk
-    #     path: android/app/build/outputs/apk/release/
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v1
+      with:
+        name: app-release.apk
+        path: android/app/build/outputs/apk/release/
+
+    # - name: Distribute app via Firebase App Distribution
+    #   env:
+    #       firebaseToken: ${{ secrets.FIREBASE_TOKEN }}
+    #       firebaseGroups: ${{ secrets.FIREBASE_GROUPS }}
+    #       firebaseAppId: ${{ secrets.FIREBASE_APP_ID }}
+    #       notes: ${{ github.event.head_commit.message }}
+    #   run: |
+    #     yarn global add firebase-tools
+    #     export PATH="$(yarn global bin):$PATH"
+    #     firebase \
+    #       appdistribution:distribute android/app/build/outputs/apk/release/app-release.apk \
+    #       --app $firebaseAppId \
+    #       --release-notes "$notes" \
+    #       --groups "$firebaseGroups" \
+    #       --token "$firebaseToken"
+
+
+
+# name: Development Distribution For develop
+
+# on:
+#   push:
+#     branches:
+#       - develop
+
+# jobs:
+#   dev-distribution:
+#     runs-on: ubuntu-latest
+#     name: Development Distribution
+#     steps:
+#     - name: Checkout
+#       uses: actions/checkout@v2
+#     - uses: actions/setup-node@v4
+#       with: 
+#          node-version: 18
+  
+
+#     - name: Install node modules
+#       run: npm i --force
+
+#     - name: Run test
+#       run: npm run action-test
+
+#     - name: init Gradel
+#       uses: gradle/actions/setup-gradle@v3
+
+#     - name: Cache Gradle Wrapper
+#       uses: actions/cache@v2
+#       with:
+#         path: ~/.gradle/wrapper
+#         key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('gradle/wrapper/gradle-wrapper.properties') }}
+
+#     - name: Cache Gradle Dependencies
+#       uses: actions/cache@v1
+#       with:
+#         path: ~/.gradle/caches
+#         key: ${{ runner.os }}-gradle-caches-${{ hashFiles('gradle/wrapper/gradle-wrapper.properties') }}
+#         restore-keys: |
+#           ${{ runner.os }}-gradle-caches-
+
+#     # - name: Make Gradlew Executable
+#     #   run: cd android && chmod +x ./gradlew
+
+#     - name: Build Android Release
+#       run: |
+#            ./gradlew build 
+
+#     # - name: Upload Artifact
+#     #   uses: actions/upload-artifact@v1
+#     #   with:
+#     #     name: app-release.apk
+#     #     path: android/app/build/outputs/apk/release/
 
