--- a/.github/workflows/build-develop.yml
+++ b/.github/workflows/build-develop.yml
@@ -19,7 +19,7 @@ jobs:
       run: |
         yarn install
 
-    - name: Run test
+    - name: Run action-test
       run: |
         yarn run test
 
